# fast-api-lms

./: LICENSE  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/src/: users.json
alembic/versions/: 8f62638d12a6_is_active_flag_moved_from_profile_to_user.py  f2ff47fff48d_.py
api/: courses.py  users.py
api/service/: users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
schemas/: user.py
