[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["Karpov Dmitry <author@company.com>"]
readme = "README.md"
packages = [{include = "fast_api_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^1.4.43"
sqlalchemy-utils = "^0.38.3"
alembic = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
